# news-push

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-03-31-production-hardening.md  2026-04-01-oil-adjustment-calendar.md  2026-04-02-docker-deployment.md
docs/superpowers/specs/: 2026-04-01-oil-adjustment-calendar-design.md  2026-04-02-docker-deployment-design.md
scripts/: deploy_docker.sh  generate_oil_calendar.py
src/news_push/: __init__.py  __main__.py  app.py  clock.py  config.py  http.py  news_image.py  oil.py  oil_calendar.py  state.py  wecom.py
src/news_push.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/news_push/data/: oil_calendar_2026.json
tests/: test_app.py  test_deploy_script.py  test_http.py  test_news_image_service.py  test_oil_calendar_generator.py  test_oil_service.py  test_state_store.py  test_wecom.py
